# dev-win-service

./: .gitignore
dev-win-sc/: CMakeLists.txt  config.h  dev-win-sc.cpp
dev-win-sc-base/: CMakeLists.txt  config.h  dev-win-sc.cpp
dev-win-sc-base/logger/: logger.h
dev-win-sc/logger/: log-msg.cpp  log-msg.h  logger.cpp  logger.h
dev-win-sc/service/: WinService.cpp  WinService.h
dev-win-sc/utils/: utils.h
